--- a/TPDS/tongping.bib
+++ b/TPDS/tongping.bib
@@ -10,11 +10,12 @@ author = {Sam Silvestro and
 Hongyu Liu and Tianyi Liu and Zhiqiang Lin and Tongping Liu},
   title = {Guarder: An Efficient Heap Allocator with Strongest and Tunable Security},
   booktitle = {Proceedings of The 27th USENIX Security Symposium  ({Security'18})},
+  year = {2018}
 }
 
 @misc{umassdiversity,
   author = {UMass}, 
-  title = {Diversity Matters: Data}
+  title = {Diversity Matters: Data},
   howpublished = {\url{https://www.umass.edu/diversity/data-policies}},  
 }
 
