--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -2,14 +2,18 @@
 \section{Introduction}
 \label{sec:intro}
 
-The Non-Uniform Memory Access (NUMA) architecture is a scalable hardware design for multi-core era. Compared to Uniform Memory Access (UMA) architecture, the NUMA architecture avoids the bottleneck of using one memory controller, where each node/processor can access its own memory controller concurrently. But the NUMA architecture imposes multiple system challenges for parallel applications, such as remote accesses, interconnect congestion, and node imbalance~\cite{Blagodurov:2011:CNC:2002181.2002182}. For instance, the latency of remote accesses is almost double as that of local accesses. The memory allocator is one such component that could help solve these challenges.   
+The Non-Uniform Memory Access (NUMA) architecture is a scalable hardware design for multi-core era. Compared to Uniform Memory Access (UMA) architecture, the NUMA architecture avoids the bottleneck of using one memory controller, where each node/processor can access its own memory controller concurrently. But the NUMA architecture imposes multiple system challenges for parallel applications, such as remote accesses, interconnect congestion, and node imbalance~\cite{Blagodurov:2011:CNC:2002181.2002182}. For instance, the latency of remote accesses is almost double as that of local accesses. The memory allocator is one such component that could help solve these challenges, without manual intervention.   
 
-However, general-purpose memory allocators, such as dlmalloc~\cite{dlmalloc},  Hoard~\cite{Hoard}, TcMalloc~\cite{tcmalloc}, jemalloc~\cite{jemalloc}, Scalloc~\cite{Scalloc}, were designed for symmetric multiprocessing machines. They do not consider the heterogeneity of the underlying hardware. As a result, they can not achieve good performance, based on existing work~\cite{tcmallocnew, yang2019jarena} and our evaluation. 
+However, general-purpose memory allocators, such as dlmalloc~\cite{dlmalloc},  Hoard~\cite{Hoard}, TcMalloc~\cite{tcmalloc}, jemalloc~\cite{jemalloc}, SuperMalloc~\cite{supermalloc}, Scalloc~\cite{Scalloc}, and mimalloc~\cite{mimalloc}, were designed for symmetric multiprocessing machines. They do not consider the heterogeneity of the underlying hardware, or has very little support~\cite{mimalloc}. As a result, they can not achieve a good performance, based on existing work~\cite{tcmallocnew, yang2019jarena} and our evaluation. 
 
-There exist some NUMA-aware memory allocators~\cite{tcmallocnew, kim2013node, yang2019jarena}. They tried to reduce remote accesses, but with different requirements. For instance, JArena requires the change of applications and OS~\cite{yang2019jarena}, while nMART requires the change of the OS~\cite{kim2013node}.  Kaminski designs the first general-purpose memory allocator that does not require the change of applications and OS~\cite{tcmallocnew}, called as TcMalloc-NUMA in the remainder of this paper. TcMalloc-NUMA aims to reduce remote accesses: allocations will be satisfied from a per-thread buffer, or the local node when there are no available objects in its per-thread buffer; It also proposes per-node freelists to track objects that are considered to originate from the current node. However, \textit{TcMalloc-NUMA has multiple issues that may significantly affect its performance}. First, allocating an object from the local buffer cannot guarantee the locality, if it does not control deallocations. In TcMalloc-NUMA, a freed object is always placed into the deallocating thread's local buffer, a mechanism originated from TcMalloc~\cite{tcmalloc}, even if it is originated from a remote node. This clearly will cause unnecessary remote accesses. % an origin-computable design. Based on this design, we could always return an object back to its original node efficiently.    
- Second, it may introduce significant remote access, when a thread is migrated to a remote node by the OS: this thread is not only forced to access its stack remotely and reload all data that are already held in the original node; Further, all deallocated objects by this thread will be placed into the new node's freelist afterwards, causing unnecessary remote accesses. % node-based task assignment that not only avoids  thread migration across different nodes, but also consider node balance.  
- Third, TcMalloc-NUMA does not consider interconnect congestion and node imbalance, other notorious reasons that may cause serious performance degradation~\cite{Blagodurov:2011:CNC:2002181.2002182}. % a global 
- Fourth, it does not take advantage of new hardware feature like huge page support. % explicit huge page management based on allocation/deallocation pattern. 
+Some memory allocators support the NUMA architecture~\cite{tcmallocnew, kim2013node, yang2019jarena, mimalloc}, as further discussed in Section~\ref{sec:related}. 
+%They tried to reduce remote accesses, but with different requirements. For instance, JArena requires the change of applications and OS~\cite{yang2019jarena}, while nMART requires the change of the OS~\cite{kim2013node}.  
+Among them, Kaminski designs the first NUMA-aware memory allocator~\cite{tcmallocnew}, called as TcMalloc-NUMA in the remainder of this paper. TcMalloc-NUMA aims to reduce remote accesses, but without considering interconnect congestion and node imbalance that may also significantly affect the performance. In TcMalloc-NUMA, allocations will be satisfied from a per-thread heap first, and then the freelist of the current node. However, \textit{TcMalloc-NUMA has multiple issues that may significantly affect its effectiveness}. First, it did not control deallocations of objects, and a freed object is always placed into the deallocating thread's local buffer, a mechanism originated from TcMalloc~\cite{tcmalloc}. However, if an object is originated from a remote node, this clearly will cause unnecessary remote accesses. Second, it did not control the placement of threads: a thread can be migrated to a remote node upon synchronizations or system calls, which not only force this thread to access its stack remotely but also reload all data that are already in the cache of its original node.  Further, after the migration, all deallocated objects by this thread will be placed into the new node's freelist afterwards, causing unnecessary remote accesses. % node-based task assignment that not only avoids  thread migration across different nodes, but also consider node balance.  
+%Third, TcMalloc-NUMA does not consider interconnect congestion and node imbalance, other notorious reasons that may cause serious performance degradation~\cite{Blagodurov:2011:CNC:2002181.2002182}. % a global 
+%Fourth, it does not take advantage of new hardware feature like huge page support. 
+ 
+ 
+ % explicit huge page management based on allocation/deallocation pattern. 
 
 %However, there are still multiple issues in these NUMA-aware allocators. In these allocators, the relationship between each thread and each node is not determined beforehand, which is completely relying on the OS scheduler. Although this design may benefit from better resource optimization provided by the OS scheduler, it adds additional overhead by frequently checking the placement of every thread. More importantly, \textit{this design may break the locality guarantee when a thread is migrated to a new node}. First, this thread is forced to access its stack located remotely in the previous node, and reload all data that may already exist in cache lines there. Even worse, after the migration, this thread may  place objects that are originated from the previous node to the freelist of the new node, causing remote accesses unnecessarily afterward.  TcMalloc-NUMA has another serious issue that a freed object is always placed into the cache of the current thread, a design originated from TcMalloc~\cite{tcmalloc}. The per-thread cache was designed to reduce the lock contention faced by multithreaded applications since objects from per-thread cache can be allocated without acquiring any lock. However, remote accesses will be introduced, if an object is freed by a thread that is running on a different node from its allocation thread. Since such an object is placed to the per-thread cache of the deallocation thread, it will be accessed by this thread that is running on the remote node afterward, causing unnecessary remote accesses. 
 
