--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -16,7 +16,21 @@
  keywords = {concurrency, monitoring, race, threading},
 } 
 
-
+@inproceedings{SuperMalloc,
+author = {Kuszmaul, Bradley C.},
+title = {SuperMalloc: A Super Fast Multithreaded Malloc for 64-Bit Machines},
+year = {2015},
+isbn = {9781450335898},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2754169.2754178},
+doi = {10.1145/2754169.2754178},
+pages = {41–55},
+numpages = {15},
+keywords = {malloc, Memory Allocation Library, Virtual Memory},
+location = {Portland, OR, USA},
+series = {ISMM '15}
+}
 
 @inproceedings{DBLP:conf/IEEEpact/DrebesPH0D16,
   author    = {Andi Drebes and
