Updates from Overleaf

--- a/paper-oopsla21/main.tex
+++ b/paper-oopsla21/main.tex
@@ -1,4 +1,9 @@
-\documentclass[acmsmall,review,anonymous]{acmart}
+\documentclass[acmsmall,anonymous,review]{acmart}
+%\documentclass[acmsmall, review]{acmart}
+%\documentclass[acmsmall,screen]{acmart}
+\pdfpagewidth=8.5in
+\pdfpageheight=11in
+
 \settopmatter{printfolios=true,printccs=false,printacmref=false}
 
 \usepackage{times}
